--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
   <script src="lib/babel-polyfill/browser-polyfill.js"></script>
   <!-- your app's js -->
   <script src="js/app.js"></script>
+  <script src="js/controllers.js"></script>
 </head>
 
 <body ng-app="ionic-conduit">
